<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="32dp"
    android:orientation="vertical"
    tools:context="com.example.eventplanner.cictep.RegistrationActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inpLayFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/inpFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inpLayLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/inpLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inpLayUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/inpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inpLayPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/inpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="#444"
        android:text="@string/register"/>

</LinearLayout>
